<resources>
    <string name="app_name" translatable="false">BookFlight</string>
    <string name="book_flights">Book Flights</string>
    <string name="roundtrip">Roundtrip</string>
    <string name="one_way">One way</string>
    <string name="history">History</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="depart">Depart</string>
    <string name="pasajeros">Pasajeros</string>
    <string name="maximum_numbre_of_stops">Maximum numbre of stops</string>
    <string name="non_stop">Non stop</string>
    <string name="one_stop">One stop</string>
    <string name="_2_or_more">2 or more</string>
    <string name="search_flights">Search Flights</string>
    <string name="resultado">Resultado</string>
    <string name="euismod_nunc_in_sit_ipsum_laoreet_amet_odio_nec_a_vel_sit_condimentum_condimentum_enim_a_atlorem_dolor_est_elit_in_dolor_amet_nec_libero_curabitur_sagittis_libero_viverra_vitae_id_tincidunt_est_vitae_euismod_viverra_nullam_consectetur_adipiscing_nunc_auctor_libero_consectetur_adipiscing_libero_tincidunt_curabitur_sagittis_vel_enim_elit_at_auctor_id_id_id_laoreet_dolor_ipsum_odio_lorem_dolor_nullam" translatable="false">Euismod nunc in sit ipsum laoreet amet odio nec a vel sit condimentum condimentum enim a atlorem dolor est elit in dolor amet nec libero curabitur sagittis libero viverra vitae id tincidunt est vitae euismod viverra nullam consectetur adipiscing nunc auctor libero consectetur adipiscing libero tincidunt curabitur sagittis vel enim elit at auctor id id id laoreet dolor ipsum odio lorem dolor nullam \nEuismod nunc in sit ipsum laoreet amet odio nec a vel sit condimentum condimentum enim a atlorem dolor est elit in dolor amet nec libero curabitur sagittis libero viverra vitae id tincidunt est vitae euismod viverra nullam consectetur adipiscing nunc auctor libero consectetur adipiscing libero tincidunt curabitur sagittis vel enim elit at auctor id id id laoreet dolor ipsum odio lorem dolor nullam\nEuismod nunc in sit ipsum laoreet amet odio nec a vel sit condimentum condimentum enim a atlorem dolor est elit in dolor amet nec libero curabitur sagittis libero viverra vitae id tincidunt est vitae euismod viverra nullam consectetur adipiscing nunc auctor libero consectetur adipiscing libero tincidunt curabitur sagittis vel enim elit at auctor id id id laoreet dolor ipsum odio lorem dolor nullam</string>
    <string name="cero" translatable="false">0</string>
    <string name="returnn">Return</string>
    <string name="notresults">No se ha realizado ninguna búsqueda</string>
    <string name="xero" translatable="false">0</string>
    <string name="add_button">Add button</string>
    <string name="rest_button">Rest button</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="login" translatable="false">Iniciar sesión</string>
    <string name="vuelo" translatable="false">Vuelo</string>
    <string name="title_activity_bottom" translatable="false">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="register">Resgistro</string>
    <string name="hello">"Hola, "</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="search">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="reservas">Reservas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit">Editar perfil</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="transbordos">transbordos</string>
    <string name="tipo">Tipo</string>
    <string name="clearHistory">Borrar historial</string>
    <string name="mtrl_picker_save" description="Confirms the selection [CHAR_LIMIT=12]">Guardar</string>
    <string name="mtrl_picker_text_input_date_range_start_hint" description="Label for the start date in a range selected by the user [CHAR_LIMIT=60]">Salida</string>
    <string name="mtrl_picker_text_input_date_range_end_hint" description="Label for the end date in a range selected by the user [CHAR_LIMIT=60]">Vuelta</string>
    <string name="comprar">Comprar</string>
    <string name="precio">Precio</string>
    <string name="companhia">Compañía</string>
    <string name="select_dates">Selecciona las fechas</string>
    <string name="invalid_email">Introduzca una dirección de correo electrónico válida</string>
    <string name="invalid_passwords">La contraseña debe contener mínimo 6 caracteres</string>
    <string name="error_login_tittle">Errror al iniciar sesión</string>
    <string name="error_login_message">Los datos introducidos no son los correctos. Comprueba la información o cree una nueva cuenta.</string>
    <string name="accept">Aceptar</string>
    <string name="dialog_buy">Confirmar compra</string>
    <string name="dialog_buy_message">Al realizar la siguiente compra estás aceptando los términos y condiciones de BookFlight, así como el tratamiento de los datos para proceder con la reserva.</string>
    <string name="cancell">Cancelar</string>
    <string name="buy">Comprar</string>
    <string name="error">Selecciona un vuelo</string>
    <string name="dialog_select_purchase">Para proceder con la reserva es necesario que selecciones aquellos cuelos que desees comprar</string>
    <string name="search_not_found">No has realizado ninguna búsqueda</string>
    <string name="flight_not_found">No se han encontrado itinerarios</string>
    <string name="delete_history">Eliminar historial</string>
    <string name="no_reservations">Aún no has realizado ninguna reserva</string>
    <string name="not_search">No se puede buscar</string>
    <string name="not_search_message">Por favor, rellene todos los campos para realizar la búsqueda</string>
    <string name="code_fly">Código del vuelo</string>
    <string name="edit_search">Editar</string>
    <string name="maps_key" translatable="false">AIzaSyDYhK74k55cJjzQe1SBigSKoUwaFKEBD7Q</string>
    <string name="ubication">Ubicación del aeropuerto</string>
    <string name="dialog_delete_reserve">Eliminar reserva</string>
    <string name="dialog_delete_reserve_message">Al confirmar la cancelación de la reserva ya no podrás acceder a la información del vuelo. En caso de que quieras volver a viajar después de haber cancelado la reserva, deberás volver a comprar los billetes.</string>
    <string name="dialog_title_reminder">¿Crear recordatorio?</string>
    <string name="dialog_message_reminder">Al aceptar guardarás un recordatorio en el calendario.</string>
    <string name="crear">Crear</string>
    <string name="save">Guardar</string>
    <string name="dialog_title_type">Cambiar billete</string>
    <string name="Clase">Categoría del billete</string>
    <string name="turista">Turista</string>
</resources>