<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.d4viddf.bookflight.ui.home.HomeFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.d4viddf.bookflight.ui.profile.ProfileFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.d4viddf.bookflight.ui.reservations.ReservationsFragment"
        android:label="@string/reservas"
        tools:layout="@layout/fragment_reservations" />
</navigation>