<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarr"
            style="@style/Widget.Material3.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textAlignment="center"

            app:navigationIcon="@drawable/ic_round_arrow_back_ios_new_24"
            app:title="@string/search"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineLarge" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_resultsr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topli" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buy"
        android:layout_margin="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_round_shopping_cart_24"
        android:text="@string/comprar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:id="@+id/notfoundr"
        android:visibility="gone"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/imghi"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_round_search_24"
            app:tint="@color/material_on_surface_emphasis_medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/imghi"
            android:text="@string/flight_not_found"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            />
    </RelativeLayout>
</RelativeLayout>